# openface_ros_-CentralLabFacilities-_meta

openface2_bridge/: CMakeLists.txt  package.xml
openface2_bridge/launch/: headpose.launch  openface2_ros.launch
openface2_bridge/src/: headpose.cpp  headpose_single.cpp  openface2_ros.cpp
openface2_ros/: CMakeLists.txt  package.xml
openface2_ros_msgs/: CMakeLists.txt  package.xml
openface2_ros_msgs/msg/: Face.msg  Faces.msg
